@@ -19,6 +19,7 @@ prefix) put in the ``debug_flags`` variable in ``bazaar.conf``.
 -Dindex           Trace major index operations.
 -Dknit            Trace knit operations.
 -Dlock            Trace when lockdir locks are taken or released.
+-Dprogress        Trace progress bar operations.
 -Dmerge           Emit information for debugging merges.
 -Dpack            Emit information about pack operations.
 -Dsftp            Trace SFTP internals.
